[GREEN] Fixed tests for controllers and service